# faculty-sport

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.local  faculty-sport.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: faculty-sport-0.1.0.0-inplace.conf  package.cache
sql/: 001_schema.sql  002_seed.sql
src/App/: CLI.hs
src/App/Commands/: Coaches.hs  Competitions.hs  Enrollments.hs  Locations.hs  Schedule.hs  Sections.hs  Students.hs  Teachers.hs
src/Domain/: Common.hs  Competition.hs  Enrollment.hs  Location.hs  Schedule.hs  Section.hs  Student.hs  Teacher.hs
src/Infra/DB/: Pool.hs  Repo.hs  Sql.hs
src/UseCases/: Coaches.hs  Competitions.hs  Enrollments.hs  Locations.hs  Schedule.hs  Sections.hs  Students.hs  Teachers.hs
